<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_3sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:id="@+id/main_view"
    app:cardCornerRadius="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/rounded_back_for_search"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="0dp"
            android:src="@drawable/placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout6" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/author"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/requested_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/requested_quantity"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/total_payable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/total_payable"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seller_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_3sdp"
                android:text="Seller information"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/seller_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/seller_name"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/seller_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/seller_address"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/seller_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/phone"
                    android:textSize="@dimen/_14ssp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/call_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_call"
                    app:backgroundTint="@color/primary"
                    app:fabSize="mini"
                    app:tint="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>