<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_layout_padding"
    tools:context=".ui.registration.RegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/register_illustrator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vector_illustrator_height"
        android:background="@drawable/register_illustration"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextHeadLine"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_illustrator" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_margin_top"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_at" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_id_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin_start"
                    android:layout_weight="0.9"
                    android:hint="@string/email_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_id_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_margin_top"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_face" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/full_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin_start"
                    android:layout_weight="0.9"
                    android:hint="Full name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/full_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_margin_top"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_phone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin_start"
                    android:layout_weight="0.9"
                    android:hint="@string/mobile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/password_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_margin_top"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/select_image">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_lock" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin_start"
                    android:layout_weight="0.9"
                    android:hint="Password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/confirm_password_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_margin_top"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/password_ll">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_lock" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin_start"
                    android:layout_weight="0.9"
                    android:hint="@string/confirm_password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/address_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_ll">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_location" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin_start"
                    android:layout_weight="0.9"
                    android:hint="@string/address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:imeOptions="actionDone"
                        android:inputType="textPostalAddress"
                        android:clickable="true"
                        android:focusable="false"

                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/sign_up_caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/continue_btn"
            style="@style/button"
            android:text="@string/_continue" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joined_us_before"
                android:textSize="@dimen/forgot_pass_text_size" />

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edit_text_margin_start"
                android:text="@string/loginBody"
                android:textColor="@color/primary"
                android:textSize="@dimen/forgot_pass_text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>