<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_2sdp"
    app:cardCornerRadius="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:padding="@dimen/main_layout_padding">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_gradient"
            android:gravity="start"
            android:padding="@dimen/_3sdp"
            android:text="@string/available"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sample_title"
            android:textColor="@color/black"
            android:textSize="@dimen/item_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/item_image"
            app:layout_constraintStart_toStartOf="@+id/item_image"
            app:layout_constraintTop_toBottomOf="@+id/item_image" />

        <TextView
            android:id="@+id/author_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="@dimen/item_sub_title_text_size"
            app:layout_constraintEnd_toEndOf="@+id/item_title"
            app:layout_constraintStart_toStartOf="@+id/item_title"
            app:layout_constraintTop_toBottomOf="@+id/item_title" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="@dimen/price_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/author_name"
            app:layout_constraintStart_toStartOf="@+id/author_name"
            app:layout_constraintTop_toBottomOf="@+id/author_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--<LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/edit_text_margin_start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_profile_image_layout"
        app:layout_constraintTop_toTopOf="@+id/user_profile_image_layout">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sample_title"
            android:textColor="@color/black"
            android:textSize="@dimen/item_title_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:visibility="gone"
                android:id="@+id/published_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_time" />

            <TextView
                android:id="@+id/published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edit_text_margin_start"
                android:gravity="end"
                android:text="@string/sample_date" />
        </LinearLayout>


        <TextView
            android:id="@+id/author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_top"
            android:text="@string/author"
            android:textColor="@color/primary"
            android:textSize="@dimen/item_sub_title_text_size" />

        <TextView
            android:id="@+id/item_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_top"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/sample_subtitle"
            android:textSize="@dimen/item_sub_title_text_size" />

        <TextView
            android:id="@+id/publisher_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_top"
            android:text="@string/published_by"
            android:textSize="@dimen/item_sub_title_text_size" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_top"
            android:gravity="end"
            android:text="@string/price"
            android:textColor="@color/primary"
            android:textSize="@dimen/price_text_size"
            android:textStyle="bold" />
    </LinearLayout>-->


</androidx.cardview.widget.CardView>